[gd_scene load_steps=10 format=2]

[ext_resource path="res://scripts/menu.gd" type="Script" id=1]
[ext_resource path="res://art/level/background_menu.png" type="Texture" id=2]
[ext_resource path="res://logo.png" type="Texture" id=3]
[ext_resource path="res://fonts/Xolonium-Regular.ttf" type="DynamicFontData" id=4]
[ext_resource path="res://art/HUD/play_icon.png" type="Texture" id=5]
[ext_resource path="res://art/HUD/exit_icon.png" type="Texture" id=6]

[sub_resource type="DynamicFont" id=1]

size = 50
use_mipmaps = false
use_filter = false
font_data = ExtResource( 4 )
_sections_unfolded = [ "Font" ]

[sub_resource type="Animation" id=2]

resource_name = "title_label_slide_in"
length = 1.0
loop = false
step = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath(".:rect_position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( -162, -50 ), Vector2( -162, 200 ) ]
}

[sub_resource type="Animation" id=3]

resource_name = "play_btn_slide_in"
length = 1.0
loop = false
step = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath(".:rect_position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 0, 605 ), Vector2( 0, 300 ) ]
}

[node name="menu" type="Node" index="0"]

script = ExtResource( 1 )

[node name="Camera2D" type="Camera2D" parent="." index="0"]

position = Vector2( 512, 300 )
anchor_mode = 1
rotating = false
current = true
zoom = Vector2( 1, 1 )
limit_left = -10000000
limit_top = -10000000
limit_right = 10000000
limit_bottom = 10000000
limit_smoothed = false
drag_margin_h_enabled = true
drag_margin_v_enabled = true
smoothing_enabled = false
smoothing_speed = 5.0
offset_v = 0.0
offset_h = 0.0
drag_margin_left = 0.2
drag_margin_top = 0.2
drag_margin_right = 0.2
drag_margin_bottom = 0.2
editor_draw_screen = true
editor_draw_limits = false
editor_draw_drag_margin = false
_sections_unfolded = [ "Transform" ]

[node name="background" type="Sprite" parent="." index="1"]

position = Vector2( 512, 300 )
texture = ExtResource( 2 )
_sections_unfolded = [ "Offset", "Transform" ]

[node name="Sprite" type="Sprite" parent="." index="2"]

position = Vector2( 46.7275, 553.193 )
scale = Vector2( 0.5, 0.5 )
texture = ExtResource( 3 )
_sections_unfolded = [ "Transform" ]

[node name="HUD" type="Control" parent="." index="3"]

anchor_left = 0.5
anchor_top = 0.0
anchor_right = 0.5
anchor_bottom = 0.0
margin_left = -20.0
margin_right = 20.0
margin_bottom = 40.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1

[node name="title_label" type="Label" parent="HUD" index="0"]

modulate = Color( 0.941406, 0.503254, 0.386124, 1 )
anchor_left = 0.5
anchor_top = 0.0
anchor_right = 0.5
anchor_bottom = 0.0
margin_left = -182.0
margin_top = 200.0
margin_right = 182.0
margin_bottom = 261.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 2
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 4
custom_fonts/font = SubResource( 1 )
text = "SUPERGAME"
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1
_sections_unfolded = [ "Rect" ]

[node name="title_label_slide_in" type="AnimationPlayer" parent="HUD/title_label" index="0"]

root_node = NodePath("..")
autoplay = "title_label_slide_in"
playback_process_mode = 1
playback_default_blend_time = 0.0
playback_speed = 1.0
anims/title_label_slide_in = SubResource( 2 )
blend_times = [  ]

[node name="play_btn" type="Button" parent="HUD" index="1"]

anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -20.0
margin_top = 260.0
margin_right = 60.0
margin_bottom = 334.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
group = null
icon = ExtResource( 5 )
flat = false
align = 1
_sections_unfolded = [ "Rect" ]

[node name="play_btn_slide_in" type="AnimationPlayer" parent="HUD/play_btn" index="0"]

root_node = NodePath("..")
autoplay = "play_btn_slide_in"
playback_process_mode = 1
playback_default_blend_time = 0.0
playback_speed = 1.0
anims/play_btn_slide_in = SubResource( 3 )
blend_times = [  ]

[node name="exit_btn" type="Button" parent="HUD" index="2"]

anchor_left = 1.0
anchor_top = 0.0
anchor_right = 1.0
anchor_bottom = 0.0
margin_left = 398.0
margin_top = 15.0
margin_right = 478.0
margin_bottom = 89.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
group = null
icon = ExtResource( 6 )
flat = false
align = 1
_sections_unfolded = [ "Rect" ]

[node name="HUD_TOUCH_MENU" type="Control" parent="." index="4"]

visible = false
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_right = 40.0
margin_bottom = 40.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1

[node name="touch_play" type="TouchScreenButton" parent="HUD_TOUCH_MENU" index="0"]

position = Vector2( 501.944, 437.128 )
normal = ExtResource( 5 )
pressed = null
bitmask = null
shape = null
shape_centered = true
shape_visible = true
passby_press = false
action = ""
visibility_mode = 0

[node name="touch_exit" type="TouchScreenButton" parent="HUD_TOUCH_MENU" index="1"]

position = Vector2( 939.072, 117.572 )
normal = ExtResource( 6 )
pressed = null
bitmask = null
shape = null
shape_centered = true
shape_visible = true
passby_press = false
action = ""
visibility_mode = 0

[connection signal="button_up" from="HUD/play_btn" to="." method="_on_play_btn_button_up"]

[connection signal="button_up" from="HUD/exit_btn" to="." method="_on_exit_btn_button_up"]

[connection signal="pressed" from="HUD_TOUCH_MENU/touch_play" to="." method="_on_touch_play_pressed"]

[connection signal="pressed" from="HUD_TOUCH_MENU/touch_exit" to="." method="_on_touch_exit_pressed"]


